10-network-policy/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: erp
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
---
apiVersion: v1
kind: Namespace
metadata:
  name: un-known
