10-network-policy/3-net-policy-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allw-from-vms
  namespace: erp
spec:
  podSelector: {} # Selects all pods in the erp namespace
  policyTypes:
  - Ingress
  ingress:
  - from:
    # Traffic will be allowed if it originates from a pod in the "vms" namespace and has the label `app: frontend`
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vms
      podSelector:
        matchLabels:
          app: frontend
