10-network-policy/4-net-policy-namespace-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-erp-and-un-known-namespace-to-database
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: database-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    # Allow all pods in erp namespace
    - namespaceSelector:
        matchLabels:
          name: erp
    # Allow any pod with label app: erp-app in any namespace
    - podSelector:
        matchLabels:
          app: erp-app
