10-network-policy/5-default-deny.yaml
# - create default deny ingress policy in prod-db NS
# - create policy with allow connections from prod Namespaces to prod-db
# - create policy with allow connections from stage Namespaces and have label: role=db-connect
# - create policy with allow connections from any Namespaces and have label: role=db-external-connect

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-stage-db-connect
  namespace: prod-db
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: prod  # Allows connections from `prod` namespace
    - namespaceSelector:
        matchLabels:
          name: stage  # Allows connections from `stage` namespace
      podSelector:
        matchLabels:
          role: db-connect  # Specifically with `role=db-connect` label
    - namespaceSelector: {}  # Allows connections from any namespace
      podSelector:
        matchLabels:
          role: db-external-connect  # Specifically with `role=db-external-connect` label
