10-network-policy/6-net-policy-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-erp-namespace-to-database
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: database-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: erp  # Make sure the erp namespace is labeled with name=erp
