10-network-policy/net-policy-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allw-from-vms
  namespace: erp
spec:
  podSelector: {} # Selects all pods in the current namespace
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vms
